GeNN now generates separate _CODE sets for each device, optimised for each device's architecture. Directories are of the form [modelName]_CODE_[device number].
Makefiles now compile each _CODE directory as separate objects by NVCC with model_CODE_devno/sm_version file.

Organised utils.h, global.h, modelSpec.h to help modularize the generated codesets and code generation lib. global.h contains only global variables, utils.h now contains only utility functions, and synapse / neuron model classes / structs have been moved from utils.h into modelSpec.h (separate user code from generator code).

Introduced NNmodel::setDT(dt) to further separate user code (i.e. currentModel.cc) from generator code. The DT macro method is left for legacy support.

--- a/userproject/SynDelay_project/Makefile
+++ b/userproject/SynDelay_project/Makefile
@@ -13,7 +13,7 @@
 
 ROOTDIR		:= $(GeNNPATH)/userproject/SynDelay_project
 EXECUTABLE	:= syn_delay
-SOURCES		:= SynDelaySim.cu
+SOURCES		:= SynDelaySim.cpp
 
 INCLUDE_FLAGS	:= 
 LINK_FLAGS	:= 
