Multiple bugfix changes. Split the utils.h into utils.cc, containing utils function definitions only, and utils.h, containing declarations and macros only (necessary for letting me compile code for different devces separately). Changed common Makefiles to deal with new code. Renamed my .cpp and .hpp files to GeNN's standard .cc and .h form.

--- a/lib/src/Makefile
+++ b/lib/src/Makefile
@@ -13,7 +13,7 @@
 
 ROOTDIR         := $(GeNNPATH)/lib/src
 EXECUTABLE      := generateALL
-SOURCES         := generateALL.cpp
+SOURCES         := generateALL.cc utils.cc
 
 INCLUDE_FLAGS   :=
 LINK_FLAGS      :=
